--- a/chess-game-client/chess-game-client/package.json
+++ b/chess-game-client/chess-game-client/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
-    "react": "^18.0.0",
+    "icons": "^1.0.0",
+    "react": "^18.3.1",
     "react-dom": "^18.0.0",
-    "react-icons": "^5.4.0",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
@@ -35,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
